--- a/html/services.html
+++ b/html/services.html
@@ -21,6 +21,10 @@
 
     <!-- Internal Styling -->
      <style>
+        .footer{
+            display: flex;
+            justify-content: space-between;
+        }
         .container-footer{
             font-size: 1.2rem;
         }
@@ -119,9 +123,9 @@
             <h5>BCS/BSE</h5>
         </div>
         <div class="footer-img" >
-            <img src="../assets/facebook_220200.png" alt="Facebook" style="width: 1rem; height: 1rem;">
-            <img src="../assets/instagram.png" alt="Instagram" style="width: 1rem; height: 1rem;">
-            <img src="../assets/whatsapp.png" alt="whatsapp" style="width: 1rem; height: 1rem;">
+            <img src="../assets/facebook_220200.png" alt="Facebook" style="width: 1.5rem; height: 1.5rem;">
+            <img src="../assets/instagram.png" alt="Instagram" style="width: 1.5rem; height: 1.5rem;">
+            <img src="../assets/whatsapp.png" alt="whatsapp" style="width: 1.5rem; height: 1.5rem;">
         </div>
     </footer>
 </body>
