--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="/css/index.css">
 
-    <!-- Internal Style -->
+    <!-- Internal Styling -->
      <style>
-        .container-footer p{
+        .footer{
+            display: flex;
+            justify-content: space-between;
+        }
+        .container-footer{
             font-size: 1.2rem;
         }
-
      </style>
 </head>
 <body>
@@ -84,6 +87,7 @@
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="footer" role="contentinfo">
         <div class="container-footer">
             <p>© 2025 Legacy Computer Services LTD. All rights reserved.</p>
@@ -92,9 +96,9 @@
             <h5>BCS/BSE</h5>
         </div>
         <div class="footer-img" >
-            <img src="./assets/facebook_220200.png" alt="Facebook" style="width: 1rem; height: 1rem;">
-            <img src="./assets/instagram.png" alt="Instagram" style="width: 1rem; height: 1rem;">
-            <img src="./assets/whatsapp.png" alt="whatsapp" style="width: 1rem; height: 1rem;">
+            <img src="../assets/facebook_220200.png" alt="Facebook" style="width: 1.5rem; height: 1.5rem;">
+            <img src="../assets/instagram.png" alt="Instagram" style="width: 1.5rem; height: 1.5rem;">
+            <img src="../assets/whatsapp.png" alt="whatsapp" style="width: 1.5rem; height: 1.5rem;">
         </div>
     </footer>
 </body>
