--- a/html/about_us.html
+++ b/html/about_us.html
@@ -21,7 +21,11 @@
 
     <!-- Internal Styling -->
      <style>
-        .container-footer p{
+        .footer{
+            display: flex;
+            justify-content: space-between;
+        }
+        .container-footer{
             font-size: 1.2rem;
         }
      </style>
@@ -128,9 +132,9 @@
             <h5>BCS/BSE</h5>
         </div>
         <div class="footer-img" >
-            <img src="../assets/facebook_220200.png" alt="Facebook" style="width: 1rem; height: 1rem;">
-            <img src="../assets/instagram.png" alt="Instagram" style="width: 1rem; height: 1rem;">
-            <img src="../assets/whatsapp.png" alt="whatsapp" style="width: 1rem; height: 1rem;">
+            <img src="../assets/facebook_220200.png" alt="Facebook" style="width: 1.5rem; height: 1.5rem;">
+            <img src="../assets/instagram.png" alt="Instagram" style="width: 1.5rem; height: 1.5rem;">
+            <img src="../assets/whatsapp.png" alt="whatsapp" style="width: 1.5rem; height: 1.5rem;">
         </div>
     </footer>
 </body>
