--- a/html/about_us.html
+++ b/html/about_us.html
@@ -4,7 +4,6 @@
     <!-- Meta Essentials -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Legacy Computer Services LTD - Student-powered IT excellence since 2025. Learn about our mission, values, and passionate BCS & BSE team.">
     <meta name="theme-color" content="#0d9c43">
 
     <title>Legacy Computer Services - About Us</title>
@@ -31,9 +30,6 @@
      </style>
 </head>
 <body>
-    <!-- Skip to main content -->
-    <a href="#main" class="sr-only">Skip to main content</a>
-
     <!-- Header -->
     <header class="header" role="banner">
         <nav class="nav container" aria-label="Primary navigation">
@@ -41,7 +37,6 @@
                 <li><a href="../index.html" class="nav__link">Home</a></li>
                 <li><a href="./services.html" class="nav__link">Services</a></li>
                 <li><a href="./about_us.html" class="nav__link active" aria-current="page">About Us</a></li>
-                <!-- <li><a href="./team-members.html" class="nav__link">Our Team</a></li> -->
             </ul>
         </nav>
     </header>
@@ -114,7 +109,7 @@
             </div>
         </section>
 
-        <!-- Meet Our Team CTA -->
+        <!-- Meet Our Team -->
         <div class="team-button-container">
             <a href="./team-members.html" class="cta-button">
                 <span class="icon" aria-hidden="true">👥</span>
