--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <!-- Meta Essentials -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Legacy Computer Services LTD - Professional legacy system maintenance and student-led IT solutions.">
     <meta name="theme-color" content="#0d9c43">
 
     <title>Legacy Computer Services</title>
@@ -31,9 +30,6 @@
      </style>
 </head>
 <body>
-    <!-- Skip to main content (keyboard accessibility) -->
-    <a href="#main" class="sr-only">Skip to main content</a>
-
     <!-- Header -->
     <header class="header" role="banner">
         <!-- Navigation Section -->
@@ -42,7 +38,6 @@
                 <li><a href="./index.html" class="nav__link active" aria-current="page">Home</a></li>
                 <li><a href="./html/services.html" class="nav__link">Services</a></li>
                 <li><a href="./html/about_us.html" class="nav__link">About Us</a></li>
-                <!-- <li><a href="./team-members.html" class="nav__link">Our Team</a></li> -->
             </ul>
         </nav>
     </header>
@@ -78,7 +73,7 @@
             </form>
         </section>
 
-        <!-- Meet Our Team CTA -->
+        <!-- Meet Our Team Link -->
         <div class="team-button-container">
             <a href="./html/team-members.html" class="cta-button">
                 <span class="icon" aria-hidden="true">👥</span>
